[gd_scene load_steps=4 format=3 uid="uid://0chrw411gwkj"]

[ext_resource type="Script" path="res://Scripts/ServerBrowser.gd" id="1_ro1b2"]
[ext_resource type="PackedScene" uid="uid://dkn3on0wrsp0g" path="res://Scenes/Components/APIClient.tscn" id="2_1l1ld"]
[ext_resource type="Script" path="res://Scripts/UI_Components/ServerVBoxContainer.gd" id="2_3hslm"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ro1b2")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 320.0
offset_top = 180.0
offset_right = 960.0
offset_bottom = 536.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ServerVBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1
script = ExtResource("2_3hslm")

[node name="ServerBrowserApiClient" parent="." instance=ExtResource("2_1l1ld")]

[node name="PlayerTokenApiClient" parent="." instance=ExtResource("2_1l1ld")]

[node name="JoinServerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = 190.0
offset_right = 43.5
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Join Game"

[node name="RefreshButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -220.0
offset_right = 43.5
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Refresh"

[connection signal="server_selected" from="ScrollContainer/ServerVBoxContainer" to="." method="_on_server_v_box_container_server_selected"]
[connection signal="pressed" from="JoinServerButton" to="." method="_on_join_server_button_pressed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
